--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
     }
     ext {
         navigationVersion = "2.3.5"
+        fragment_version = "1.3.6"
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
