--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext {
         navigationVersion = "2.3.5"
         fragment_version = "1.3.6"
+        room_version = '2.4.0-alpha03'
     }
 
     dependencies {
