--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.material:material:1.5.0-alpha04'
     testImplementation 'junit:junit:4.13.2'
