--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 apply plugin: 'androidx.navigation.safeargs'
@@ -19,7 +20,7 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
+        dataBinding = true
     }
 
     buildTypes {
@@ -38,6 +39,15 @@ android {
 }
 
 dependencies {
+    //room dependencies
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    //ViewModel dependencies
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
     implementation 'androidx.preference:preference:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
