--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 apply plugin: 'androidx.navigation.safeargs'
@@ -49,6 +50,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.material:material:1.5.0-alpha05'
     testImplementation 'junit:junit:4.13.2'
 }
