created new fragments for login and registration updated database added view to show user details for testing
must debug errors concerning databinding and navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdk 31
@@ -21,7 +22,7 @@ android {
 
     buildFeatures {
         dataBinding = true
-        viewBinding = true
+
     }
 
     buildTypes {
