--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
     }
     ext {
         navigationVersion = "2.3.5"
-        fragment_version = "1.3.6"
-        room_version = '2.4.0-alpha03'
+        fragment_version = "1.4.0"
+        room_version = '2.4.0-rc01'
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
