--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,13 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GameFinder"
-        android:fullBackupContent="true"
-        android:allowBackup="true">
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="true"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.GameFinder.NoActionBar" />
-        <activity
-            android:name=".AppCompatPreference"
-            android:exported="true" />
+        android:fullBackupContent="true">
         <activity
             android:name=".MainActivity"
             android:exported="true">
